add multilayer perceptron with GPU kernels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,9 @@ add_executable(list_platforms src/list_platforms.c)
 add_executable(perceptron_cpu src/perceptron_cpu.c)
 add_executable(perceptron_opencl src/perceptron_opencl.c)
 
-# -- Multi-layer perceptron --
+# -- Multi-layer perceptrons, cpu and gpu version --
 add_executable(ml_perceptron_cpu src/ml_perceptron_cpu.c)
+add_executable(ml_perceptron_opencl src/ml_perceptron_opencl.c)
 
 
 # --- Platform-specific OpenCL setup ---
@@ -25,22 +26,26 @@ if(APPLE)
     target_include_directories(game_of_life PRIVATE /usr/local/opt/opencl-headers/include)
     target_include_directories(list_platforms PRIVATE /usr/local/opt/opencl-headers/include)
     target_include_directories(perceptron_opencl PRIVATE /usr/local/opt/opencl-headers/include)
+    target_include_directories(ml_perceptron_opencl PRIVATE /usr/local/opt/opencl-headers/include)
 
     # Apple Silicon (if needed):
     # target_include_directories(game_of_life PRIVATE /opt/homebrew/opt/opencl-headers/include)
     # target_include_directories(list_platforms PRIVATE /opt/homebrew/opt/opencl-headers/include)
     # target_include_directories(perceptron_opencl PRIVATE /opt/homebrew/opt/opencl-headers/include)
+    # target_include_directories(ml_perceptron_opencl PRIVATE /opt/homebrew/opt/opencl-headers/include)
 
     # Link against macOS OpenCL framework
     target_link_options(game_of_life PRIVATE "-framework" "OpenCL")
     target_link_options(list_platforms PRIVATE "-framework" "OpenCL")
     target_link_options(perceptron_opencl PRIVATE "-framework" "OpenCL")
+    target_link_options(ml_perceptron_opencl PRIVATE "-framework" "OpenCL")
 else()
     # Linux or Windows
     find_package(OpenCL REQUIRED)
     target_link_libraries(game_of_life OpenCL::OpenCL)
     target_link_libraries(list_platforms OpenCL::OpenCL)
     target_link_libraries(perceptron_opencl OpenCL::OpenCL)
+    target_link_libraries(ml_perceptron_opencl OpenCL::OpenCL)
 endif()
 
 # --- ncurses (only needed by game_of_life) ---
