add matrix multiplication examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(DefCon33 C)
 
 set(CMAKE_C_STANDARD 99)
 
+# --- matrix multiply demos ---
+add_executable(matrix_mult_cpu src/matrix_mult_cpu.c)
+add_executable(matrix_mult_opencl src/matrix_mult_opencl.c)
+
 # --- game_of_life executable ---
 add_executable(game_of_life src/main.c)
 
@@ -23,18 +27,21 @@ if(APPLE)
     message(STATUS "Detected macOS — using Homebrew OpenCL headers and system framework")
 
     # Intel Macs (default Homebrew path)
+    target_include_directories(matrix_mult_opencl PRIVATE /usr/local/opt/opencl-headers/include)
     target_include_directories(game_of_life PRIVATE /usr/local/opt/opencl-headers/include)
     target_include_directories(list_platforms PRIVATE /usr/local/opt/opencl-headers/include)
     target_include_directories(perceptron_opencl PRIVATE /usr/local/opt/opencl-headers/include)
     target_include_directories(ml_perceptron_opencl PRIVATE /usr/local/opt/opencl-headers/include)
 
     # Apple Silicon (if needed):
+    # target_include_directories(matrix_mult_opencl PRIVATE /opt/homebrew/opt/opencl-headers/include)
     # target_include_directories(game_of_life PRIVATE /opt/homebrew/opt/opencl-headers/include)
     # target_include_directories(list_platforms PRIVATE /opt/homebrew/opt/opencl-headers/include)
     # target_include_directories(perceptron_opencl PRIVATE /opt/homebrew/opt/opencl-headers/include)
     # target_include_directories(ml_perceptron_opencl PRIVATE /opt/homebrew/opt/opencl-headers/include)
 
     # Link against macOS OpenCL framework
+    target_link_options(matrix_mult_opencl PRIVATE "-framework" "OpenCL")
     target_link_options(game_of_life PRIVATE "-framework" "OpenCL")
     target_link_options(list_platforms PRIVATE "-framework" "OpenCL")
     target_link_options(perceptron_opencl PRIVATE "-framework" "OpenCL")
@@ -42,6 +49,7 @@ if(APPLE)
 else()
     # Linux or Windows
     find_package(OpenCL REQUIRED)
+    target_link_libraries(matrix_mult_opencl OpenCL::OpenCL)
     target_link_libraries(game_of_life OpenCL::OpenCL)
     target_link_libraries(list_platforms OpenCL::OpenCL)
     target_link_libraries(perceptron_opencl OpenCL::OpenCL)
